@startuml

title __AUTH's Class Diagram__\n

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.auth {
      class jp.ac.shibaura.it.ie.domain.application.auth.AuthEntryInteractor {
          + handle()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.auth {
      class jp.ac.shibaura.it.ie.domain.application.auth.AuthLoginInteractor {
          + handle()
      }
    }
  }
  

  namespace jp.ac.shibaura.it.ie {
    namespace domain.application.auth {
      class jp.ac.shibaura.it.ie.domain.application.auth.AuthLogoutInteractor {
          + handle()
      }
    }
  }
  

  jp.ac.shibaura.it.ie.domain.application.auth.AuthEntryInteractor .up.|> jp.ac.shibaura.it.ie.usecases.auth.entry.AuthEntryUseCase
  jp.ac.shibaura.it.ie.domain.application.auth.AuthEntryInteractor o-- jp.ac.shibaura.it.ie.domain.model.user.UserRepository : userRepository
  jp.ac.shibaura.it.ie.domain.application.auth.AuthLoginInteractor .up.|> jp.ac.shibaura.it.ie.usecases.auth.login.AuthLoginUseCase
  jp.ac.shibaura.it.ie.domain.application.auth.AuthLoginInteractor o-- jp.ac.shibaura.it.ie.domain.model.session.SessionRepository : sessionRepository
  jp.ac.shibaura.it.ie.domain.application.auth.AuthLogoutInteractor .up.|> jp.ac.shibaura.it.ie.usecases.auth.logout.AuthLogoutUseCase
  jp.ac.shibaura.it.ie.domain.application.auth.AuthLogoutInteractor o-- jp.ac.shibaura.it.ie.domain.model.session.SessionRepository : sessionRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
